# GTK4-text-editer-on-binary-tree

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  flake.nix  testFile
src/: BinaryTreeFile.cpp  BinaryTreeFile.h  CMakeLists.txt  CustomTextView.cpp  CustomTextView.h  EditorWindow.cpp  EditorWindow.h  Tree.cpp  Tree.h  main.cpp
tests/: CMakeLists.txt  gen_file.cpp  test2.cpp
